cmake_minimum_required(VERSION 3.0)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp AlgoritmiIStrukturePodataka/PripremnaZadaca1/PripremnaZadaca1.cpp AlgoritmiIStrukturePodataka/PripremnaZadaca1/PripremnaZadaca1.h AlgoritmiIStrukturePodataka/PripremnaZadaca2/PpiremnaZadaca2.cpp AlgoritmiIStrukturePodataka/PripremnaZadaca2/PpiremnaZadaca2.h)
