cmake_minimum_required(VERSION 3.0)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp
        AlgoritmiIStrukturePodataka/PripremnaZadaca1/PripremnaZadaca1.cpp
        AlgoritmiIStrukturePodataka/PripremnaZadaca1/PripremnaZadaca1.h
        AlgoritmiIStrukturePodataka/PripremnaZadaca2/PpiremnaZadaca2.cpp
        AlgoritmiIStrukturePodataka/PripremnaZadaca2/PpiremnaZadaca2.h
        AlgoritmiIStrukturePodataka/PripremnaZadaca3/PripremnaZadaca3.cpp
        AlgoritmiIStrukturePodataka/PripremnaZadaca4/PripremnaZadaca4.cpp
        AlgoritmiIStrukturePodataka/PripremnaZadaca5/PripremnaZadaca5.cpp
        AlgoritmiIStrukturePodataka/PripremnaZadaca6/PripremnaZadaca6.cpp
        AlgoritmiIStrukturePodataka/PripremnaZadaca7/PripremnaZadaca7.cpp
        AlgoritmiIStrukturePodataka/PripremnaZadaca8/PripremnaZadaca8.cpp
        AlgoritmiIStrukturePodataka/PripremnaZadaca9/PripremnaZadaca9.cpp
        AlgoritmiIStrukturePodataka/Zadaca1/Zadaca1.cpp
        AlgoritmiIStrukturePodataka/Zadaca2/Zadaca2.cpp
        AlgoritmiIStrukturePodataka/Zadaca3/Zadaca3.cpp
        AlgoritmiIStrukturePodataka/Zadaca4/Zadaca4.cpp
        AlgoritmiIStrukturePodataka/Zadaca5/Zadaca5.cpp
        TehnikeProgramiranja/Tutorijali/T1/Z2.cpp TehnikeProgramiranja/Tutorijali/T1/Z1.cpp TehnikeProgramiranja/Tutorijali/T1/Z3.cpp
        TehnikeProgramiranja/Tutorijali/T1/Z4.cpp TehnikeProgramiranja/Tutorijali/T2/Z1.cpp TehnikeProgramiranja/Tutorijali/T2/Z2.cpp
        TehnikeProgramiranja/Tutorijali/T2/Z3.cpp TehnikeProgramiranja/Tutorijali/T2/Z4.cpp TehnikeProgramiranja/Tutorijali/T2/Z5.cpp
        TehnikeProgramiranja/Tutorijali/T3/Z1.cpp TehnikeProgramiranja/Tutorijali/T4/Z1.cpp TehnikeProgramiranja/Tutorijali/T5/z7.cpp
        TehnikeProgramiranja/Tutorijali/T6/Z6.cpp TehnikeProgramiranja/Tutorijali/T7/Z9.cpp TehnikeProgramiranja/Tutorijali/T8/Z6.cpp
        TehnikeProgramiranja/Zadace/Z1/z1.cpp TehnikeProgramiranja/Zadace/Z2/z5.cpp TehnikeProgramiranja/Zadace/Z3/z5.cpp
        TehnikeProgramiranja/Zadace/Z3/z6.cpp TehnikeProgramiranja/Zadace/Z5/z5.cpp TehnikeProgramiranja/Zadace/Z5/z6.cpp
        TehnikeProgramiranja/ZadaciZaSamostalanRad/ZSR1/z1.cpp
        OsnoveRacunarstva/Tutorijali/T1/z1.c
        OsnoveRacunarstva/Tutorijali/T1/z2.c
        OsnoveRacunarstva/Tutorijali/T1/z3.c
        OsnoveRacunarstva/Tutorijali/T1/z4.c
        OsnoveRacunarstva/Tutorijali/T1/z5.c
        OsnoveRacunarstva/Tutorijali/T2/z1.c
        OsnoveRacunarstva/Tutorijali/T2/z2.c
        OsnoveRacunarstva/Tutorijali/T2/z3.c
        OsnoveRacunarstva/Tutorijali/T2/z4.c
        OsnoveRacunarstva/Tutorijali/T2/z5.c
        OsnoveRacunarstva/Tutorijali/T3/z1.c
        OsnoveRacunarstva/Tutorijali/T3/z2.c
        OsnoveRacunarstva/Tutorijali/T3/z3.c
        OsnoveRacunarstva/Tutorijali/T3/z4.c
        OsnoveRacunarstva/Tutorijali/T3/z5.c
        OsnoveRacunarstva/Tutorijali/T4/z1.c
        OsnoveRacunarstva/Tutorijali/T4/z2.c
        OsnoveRacunarstva/Tutorijali/T4/z3.c
        OsnoveRacunarstva/Tutorijali/T4/z4.c
        OsnoveRacunarstva/Tutorijali/T4/z5.c
        OsnoveRacunarstva/Tutorijali/T5/z1.c
        OsnoveRacunarstva/Tutorijali/T5/z2.c
        OsnoveRacunarstva/Tutorijali/T5/z3.c
        OsnoveRacunarstva/Tutorijali/T5/z4.c
        OsnoveRacunarstva/Tutorijali/T5/z5.c
        OsnoveRacunarstva/Tutorijali/T6/z1.c
        OsnoveRacunarstva/Tutorijali/T6/z2.c
        OsnoveRacunarstva/Tutorijali/T6/z3.c
        OsnoveRacunarstva/Tutorijali/T6/z4.c
        OsnoveRacunarstva/Tutorijali/T6/z5.c
        OsnoveRacunarstva/Tutorijali/T7/z1.c
        OsnoveRacunarstva/Tutorijali/T7/z2.c
        OsnoveRacunarstva/Tutorijali/T7/z3.c
        OsnoveRacunarstva/Tutorijali/T7/z4.c
        OsnoveRacunarstva/Tutorijali/T7/z5.c
        OsnoveRacunarstva/Tutorijali/T8/z1.c
        OsnoveRacunarstva/Tutorijali/T8/z2.c
        OsnoveRacunarstva/Tutorijali/T8/z3.c
        OsnoveRacunarstva/Tutorijali/T8/z4.c
        OsnoveRacunarstva/Tutorijali/T8/z5.c
        OsnoveRacunarstva/Tutorijali/T9/z1.c
        OsnoveRacunarstva/Tutorijali/T9/z2.c
        OsnoveRacunarstva/Tutorijali/T9/z3.c
        OsnoveRacunarstva/Tutorijali/T9/z4.c
        OsnoveRacunarstva/Tutorijali/T9/z5.c
        OsnoveRacunarstva/Tutorijali/T10/z1.c
        OsnoveRacunarstva/Tutorijali/T10/z2.c
        OsnoveRacunarstva/Tutorijali/T10/z3.c
        OsnoveRacunarstva/Tutorijali/T10/z4.c
        OsnoveRacunarstva/Tutorijali/T10/z5.c
        OsnoveRacunarstva/Tutorijali/T12/z1.c
        OsnoveRacunarstva/Tutorijali/T12/z2.c
        OsnoveRacunarstva/Tutorijali/T12/z3.c
        OsnoveRacunarstva/Tutorijali/T12/z4.c
        OsnoveRacunarstva/Tutorijali/T12/z5.c
        OsnoveRacunarstva/Tutorijali/T13/z1.c
        OsnoveRacunarstva/Tutorijali/T13/z2.c
        OsnoveRacunarstva/Tutorijali/T13/z3.c
        OsnoveRacunarstva/Tutorijali/T13/z4.c
        OsnoveRacunarstva/Tutorijali/T13/z5.c
        OsnoveRacunarstva/Tutorijali/T14/z1.c
        OsnoveRacunarstva/Tutorijali/T14/z2.c
        OsnoveRacunarstva/Tutorijali/T14/z3.c
        OsnoveRacunarstva/Tutorijali/T14/z4.c
        OsnoveRacunarstva/Tutorijali/T14/z5.c)
